<resources>
    <string name="app_name">Brainiacs</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_url">api-token-auth/</string>
    <string name="failed_to_login">Failed to login.</string>
    <string name="login_successful">Login successful.</string>
    <string name="token">token</string>

    <!-- Strings related to registration -->
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="email_hint">Enter your email</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="reenter_password_hint">Reenter your password</string>
    <string name="empty_first_name">Please provide a first name</string>
    <string name="empty_last_name">Please provide a last name</string>
    <string name="invalid_email">Please provide a valid email</string>
    <string name="empty_username">Please provide a username</string>
    <string name="non_unique_username">Username taken please provide another</string>
    <string name="empty_password">Please provide a password</string>
    <string name="empty_reenter_password">Please retype your password</string>
    <string name="invalid_password">Password do not match</string>
    <string name="submit_registraion_button">Submit</string>
    <string name="accounts_url">accounts/</string>
    <string name="teachers_url">teachers/</string>
    <string name="students_url">students/</string>
    <string name="classes_url">classes/</string>
    <string name="user_info">user-info/</string>
    <string name="questions_url">questions/</string>
    <string name="assignments_url">assignments/</string>
    <string name="grades_url">grades/</string>
    <string name="failed_to_register">Registration failed.</string>
    <string name="registration_successful">Registration successful.</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="school_name">school_name</string>
    <string name="user_id">id</string>

    <!-- Strings related to classes -->
    <string name="class_teacher">teacher</string>
    <string name="class_students">students</string>
    <string name="class_assignments">assignments</string>
    <string name="class_name">name</string>
    <string name="failed_class_creation">Failed to create class.</string>

    <!-- Strings related to Student Login -->
    <string name="title_activity_student_login">StudentLoginActivity</string>
    <string name="Student_FName">Student\'s first name</string>
    <string name="Student_LName">Student\'s last name</string>
    <string name="Student_UN">Student\'s username</string>
    <string name="Student_Pass">Student\'s password</string>
    <string name="Student_RePass">Reenter student\'s password</string>

    <!-- Strings related to Create new Class Buttons -->
    <string name="Create_New_Class">Create New Class</string>
    <string name="class_List">classes</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="student_login">Student Login</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="Assignments">Assignments</string>
    <string name="Create_Student_Account">Create Student Account</string>

    <!-- Strings relating to popup builder -->
    <string name="logout_button">Logout</string>
    <string name="New_class_name">New Class Name</string>
    <string name="Create">Create</string>
    <string name="cancel">Cancel</string>

    <!-- String related to grades -->
    <string name="failed_to_post_grade">Failed to post grade</string>
    <string name="total_questions">total_questions</string>
    <string name="correct_answers">correct_answers</string>
    <string name="student">student</string>
    <string name="assignment">assignment</string>

    <string name="Create_Activity">Create Assignment</string>

    <!-- Strings related to Student Home Page -->

    <string-array name="animalDrawables">
        <item>elephant_head</item>
        <item>frog_head</item>
        <item>owl_head</item>
        <item>tiger_head</item>
    </string-array>

    <string name="title_activity_ducks">Ducks</string>
    <string name="students_get_classes_url">students/classes/</string>
    <string name="teachers_get_classes_url">teachers/classes/</string>

    <string-array name="SpinnerSelections">
        <item>Addition</item>
        <item>Subtraction</item>
        <item>Odd/Even</item>
    </string-array>

    <string name="SelectAssignmentType">Select the Type of Assignment to Create</string>
    <string name="Reset">Cancel</string>
    <string name="create_assignment">Create Assignment</string>
    <string name="assignName">Name the assignment</string>
    <string name="questions">Questions </string>
    <string name="question">Question</string>
    <string name="NumOfQuestions">How many questions do you want? (Max 10)</string>
    <string name="answer">Answer</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="evenOdd">Odd/Even</string>

    <string-array name="questionViews">
        <item>l1</item>
        <item>l2</item>
        <item>l3</item>
        <item>l4</item>
        <item>l5</item>
        <item>l6</item>
        <item>l7</item>
        <item>l8</item>
        <item>l9</item>
        <item>l10</item>
    </string-array>

    <string-array name="questionEntry">
        <item>Q1</item>
        <item>Q2</item>
        <item>Q3</item>
        <item>Q4</item>
        <item>Q5</item>
        <item>Q6</item>
        <item>Q7</item>
        <item>Q8</item>
        <item>Q9</item>
        <item>Q10</item>
    </string-array>

    <string-array name="answerEntry">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>A8</item>
        <item>A9</item>
        <item>A10</item>
    </string-array>

    <string name="questionNumCheckToast">Must be at least 1, but not more than 10 questions</string>
    <string name="additionFailure">Question or answer does not fit addition format, check question: </string>
    <string name="subtractionFailure">Question or answer does not fit subtraction format, check question: </string>
    <string name="oddEvenFailure">Question or answer does not fit even/odd format, check question: </string>
</resources>
