<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brainiacs.seandroidapp.TeacherRegisterActivity"
    android:background="@drawable/register">





        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="501dp">

            </LinearLayout>

            <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:id="@+id/login_form">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginRight="24dp"
                        android:layout_marginLeft="24dp"
                        android:textSize="24sp"
                        android:textColor="@color/Gray"
                        android:id="@+id/first_name"
                        android:hint="@string/first_name_hint" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginRight="24dp"
                        android:layout_marginLeft="24dp"
                        android:textSize="24sp"
                        android:textColor="@color/Gray"
                        android:id="@+id/last_name"
                        android:hint="@string/last_name_hint"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginRight="24dp"
                        android:layout_marginLeft="24dp"
                        android:textSize="24sp"
                        android:textColor="@color/Gray"
                        android:id="@+id/email"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginRight="24dp"
                        android:layout_marginLeft="24dp"
                        android:textSize="24sp"
                        android:textColor="@color/Gray"
                        android:id="@+id/username"
                        android:hint="@string/username_hint"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginRight="24dp"
                        android:layout_marginLeft="24dp"
                        android:textSize="24sp"
                        android:textColor="@color/Gray"
                        android:id="@+id/password"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_marginRight="24dp"
                        android:layout_marginLeft="24dp"
                        android:textSize="24sp"
                        android:textColor="@color/Gray"
                        android:id="@+id/reenter_password"
                        android:hint="@string/reenter_password_hint" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:textSize="30sp"
                    android:textColor="@color/White"
                    android:background="@color/Gray"
                    android:text="@string/submit_registraion_button"
                    android:onClick="register"/>

            </LinearLayout>
            </ScrollView>
        </LinearLayout>
</RelativeLayout>
