<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/studentlogin"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="786dp">
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/email_login_form"
        android:layout_height="200dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="4dp">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:textColor="@color/White"
                android:layout_height="80dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textSize="30dp"
                android:hint="@string/prompt_username"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:weightSum="0.5">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:textColor="@color/White"
                android:layout_height="80dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textSize="30dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/action_sign_in"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textStyle="bold"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="25dp"
                android:textColor="@color/White"
                android:background="@color/Gray"
                android:id="@+id/sign_in_button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
