<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:id="@+id/activity_teacher_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brainiacs.seandroidapp.DashboardActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/Blue"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="285dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/username"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Gray"
                        android:textSize="18sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="60dp"
                        android:id="@+id/username"
                        tools:ignore="RtlHardcoded" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="200dp"
                        android:layout_height="180dp"
                        android:src="@drawable/teacherpic"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@android:color/background_light"
                        app:civ_fill_color="@android:color/background_light"
                        android:layout_margin="@dimen/activity_vertical_margin" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:padding="10dp"
                        android:id="@+id/CreateStudent"
                        android:text="@string/Create_Student_Account"
                        android:textColor="@color/White" />

                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="400dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:id="@+id/createActivity"
                        android:text="@string/Create_Activity"
                        android:textColor="@color/White" />

                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="400dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:id="@+id/Logout"
                        android:text="@string/logout_button"
                        android:textColor="@color/White" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridView
                    android:id="@+id/gridview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/White"
                    android:padding="@dimen/activity_vertical_margin"
                    android:layout_margin="30dp"
                    android:numColumns="auto_fit"
                    android:verticalSpacing="20dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
